feat(career): add career and enterprise pages
